2007-12-03  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageView.cs: Second part of the fix for "Bug 345423 - project is
	  not a registered protocol".

2007-11-30  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageOptionPanel.cs, WelcomePageView.cs, WelcomePageCommands.cs: Use
	  abstracted BrowserService instead of GeckoSharp, so there's no longer a
	  hard dependency on a browser.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Don't destroy the html control when disposing the
	  welcome page. Fixes bug #339590.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.css, WelcomePage.xsl: Cleanup. Removed many unused styles.
	  Align main table to the left.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump MD version.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Destroy the view widget when the view is disposed.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Project file names updated by change in MD path
	  functions.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-bg.png, mono-logo.png, WelcomePage.xsl: Updated logo.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Added an Other section in the MD property dialog
	  and moved some options there to avoid too many branches.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* WelcomePageCommands.cs: Fix compiler warning.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageOptionPanel.cs, WelcomePageCommands.cs: Changes due to new
	  property infrastructure.

2007-08-31  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* WelcomePageView.cs: Dispose resource streams, to avoid an exception in 
	  RecentChangesHandler that prevented opening projects.

2007-08-28  Mike Krüger <mkrueger@novell.com> 
